--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
-    "eslint-config-prettier": "9.0.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   },
   "engines": {
     "node": ">=18.17.0"
