--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,jsx}": "eslint --fix",
-    "*.{js,jsx,css,md}": "prettier --write"
+    "*.{js,jsx,ts,tsx}": "eslint --fix",
+    "*.{js,jsx,ts,tsx,css,md}": "prettier"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
